# GomokuCpp

./: .gitignore  Makefile  README.md
cmake/: FindSDL2.cmake
img/: black_c4  board_c4  grid_new.psd  white_c4
include/: Board.h  Engine.h  GameManager.h  Index.h  Menu.h  Parameters.h  Position.h  Rules.h  UserInterface.h  macros.h  ui.h
src/: Board.cpp  CMakeLists.txt  Engine.cpp  GameManager.cpp  Index.cpp  Menu.cpp  Parameters.cpp  Position.cpp  UserInterface.cpp  main.cpp  ui.cpp
